@@ -8,6 +8,7 @@ lib/slf4j/base.rb
 lib/slf4j.rb
 lib/slf4j/jul-to-slf4j.rb
 lib/slf4j/jul.rb
+lib/slf4j/mdc.rb
 test/test_slf4j.rb
 lib/slf4j/jdk14.rb
 lib/slf4j/jcl-over-slf4j.rb
