@@ -58,6 +58,7 @@ lib/slf4j/base.rb
 lib/slf4j.rb
 lib/slf4j/jul-to-slf4j.rb
 lib/slf4j/jul.rb
+lib/slf4j/mdc.rb
 test/test_slf4j.rb
 END
     out.puts loader_files
